Revert "Update twitter and white space - fix broken loaders (#51)" (#52)
This reverts commit ee272a718e74b67a8135a5787d28476c2cc7a60b.

--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -4,11 +4,6 @@
   background-position: center;
   background-size: cover;
   text-align: center;
-  margin-bottom: -15px;
-
-  @include tablet {
-    margin-bottom: 0;
-  }
 
   &__header {
     text-align: center;
