--- a/sass/_what-we-do.scss
+++ b/sass/_what-we-do.scss
@@ -25,8 +25,7 @@
     &__link {
       color: $blue;
       text-decoration: none;
-
-      &:hover {
+      :hover {
         color: $gold;
       }
     }
