--- a/themes/north-star/style.css
+++ b/themes/north-star/style.css
@@ -1173,11 +1173,7 @@ hr {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  text-align: center;
-  margin-bottom: -15px; }
-  @media (min-width: 768px) {
-    .banner {
-      margin-bottom: 0; } }
+  text-align: center; }
   .banner__header {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.5);
@@ -1486,7 +1482,7 @@ hr {
   .what-we-do__link {
     color: #0d2333;
     text-decoration: none; }
-    .what-we-do__link:hover {
+    .what-we-do__link :hover {
       color: #d7b377; }
   .what-we-do__text {
     font-size: 34px;
